--- a/examples/index.html
+++ b/examples/index.html
@@ -17,7 +17,7 @@
 
     <div id="addResponse"></div>
 
-    <script type="text/javascript" src="../dist/btfs-mini.js"></script>
+    <script type="text/javascript" src="../dist/btfs-sdk-mini.js"></script>
     <script type="text/javascript">
       var el = function(id){ return document.querySelector(id); };
       var btfs = new BTFS({ host: '18.163.127.219', protocol: 'http' });
